updated vim config

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -26,11 +26,11 @@
 
 #:alright themes
 #:include ./themes/Atom.conf
-include ./themes/ayu.conf
+#:include ./themes/ayu.conf
 #:include ./themes/gruvbox_light.conf
 #:include ./themes/IR_Black.conf
-#--include ./themes/Monokai.conf
-#:include ./themes/Novel.conf
+#:include ./themes/Monokai.conf
+include ./themes/Novel.conf
 #:include ./themes/Piatto_Light.conf
 #:include ./themes/Spring.conf
 #:include ./themes/Tango_Light.conf
