--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font JetBrains Mono Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -74,7 +74,7 @@ font_size 16.0
 
 #: Cursor customization {{{
 
-# cursor #ffd17f
+cursor #FCA694
 
 #: Default cursor color
 
@@ -84,7 +84,7 @@ font_size 16.0
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline)
 
@@ -263,7 +263,7 @@ touch_scroll_multiplier 1.0
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -344,7 +344,7 @@ draw_minimal_borders yes
 #: visible. Negative values will cause the value of
 #: window_margin_width to be used instead.
 
-# window_padding_width 0.0
+window_padding_width 0.0 0.0 0.0 6.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
@@ -474,13 +474,17 @@ hide_window_decorations yes
 
 #: Color scheme {{{
 
-foreground #f0fdff
-background #2a2e38
+#: foreground #f0fdff
+#: background #0A0B0A
+
+foreground   #dbe2d2
+background   #020202
+cursor  #dbe2d2
 
 #: The foreground and background colors
 
 # background_opacity 1.0
-background_opacity 0.25
+background_opacity 7.25
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -514,7 +518,7 @@ background_opacity 0.25
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-# selection_background #fffacd
+ selection_background #605A57
 
 #: The background for text selected with the mouse.
 
@@ -659,71 +663,6 @@ color15 #ffffff
 #: }}}
 
 #: OS specific tweaks {{{
-
-# macos_titlebar_color system
-
-#: Change the color of the kitty window's titlebar on macOS. A value
-#: of system means to use the default system color, a value of
-#: background means to use the background color of the currently
-#: active window and finally you can use an arbitrary color, such as
-#: #12af59 or red. WARNING: This option works by using a hack, as
-#: there is no proper Cocoa API for it. It sets the background color
-#: of the entire window and makes the titlebar transparent. As such it
-#: is incompatible with background_opacity. If you want to use both,
-#: you are probably better off just hiding the titlebar with
-#: hide_window_decorations.
-
-# macos_option_as_alt no
-
-#: Use the option key as an alt key. With this set to no, kitty will
-#: use the macOS native Option+Key = unicode character behavior. This
-#: will break any Alt+key keyboard shortcuts in your terminal
-#: programs, but you can use the macOS unicode input technique. You
-#: can use the values: left, right, or both to use only the left,
-#: right or both Option keys as Alt, instead.
-
-# macos_hide_from_tasks no
-
-#: Hide the kitty window from running tasks (Option+Tab) on macOS.
-
-# macos_quit_when_last_window_closed no
-
-#: Have kitty quit when all the top-level windows are closed. By
-#: default, kitty will stay running, even with no open windows, as is
-#: the expected behavior on macOS.
-
-# macos_window_resizable yes
-
-#: Disable this if you want kitty top-level (OS) windows to not be
-#: resizable on macOS.
-
-macos_thicken_font 0.3
-
-#: Draw an extra border around the font with the given width, to
-#: increase legibility at small font sizes. For example, a value of
-#: 0.75 will result in rendering that looks similar to sub-pixel
-#: antialiasing at common font sizes.
-
-# macos_traditional_fullscreen no
-
-#: Use the traditional full-screen transition, that is faster, but
-#: less pretty.
-
-# macos_show_window_title_in all
-
-#: Show or hide the window title in the macOS window or menu-bar. A
-#: value of window will show the title of the currently active window
-#: at the top of the macOS window. A value of menubar will show the
-#: title of the currently active window in the macOS menu-bar, making
-#: use of otherwise wasted space. all will show the title everywhere
-#: and none hides the title in the window and the menu-bar.
-
-# macos_custom_beam_cursor no
-
-#: Enable/disable custom mouse cursor for macOS that is easier to see
-#: on both light and dark backgrounds. WARNING: this might make your
-#: mouse cursor invisible on dual GPU machines.
-
 linux_display_server auto
 
 
@@ -1112,5 +1051,5 @@ linux_display_server auto
 
 # }}}
 
-include theme.conf
+#: include theme.conf
 include kitty.d/keymaps.conf
