--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,9 +2,9 @@
 {
     // "layer": "top", // Waybar at top layer
     "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
+    "height": 8, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
+    "spacing": 2, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
         "sway/workspaces",
@@ -100,13 +100,14 @@
         }
     },
     "tray": {
-        // "icon-size": 21,
-        "spacing": 10
+       // "icon-size": 4,
+        "spacing": 6
     },
     "clock": {
         // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+	"format": "{:%d,%h(%a) %I:%M}", 
+        "tooltip-format": "<big>{:%d,%B %Y}</big>\n<tt><small>{calendar}</small></tt>",
+        "format-alt": "{:%Y-%m-%d(%d,%h)}"
     },
     "cpu": {
         "format": "{usage}% ",
