--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -22,8 +22,8 @@
         "cpu",
         "memory",
         "temperature",
-        "backlight",
-        "sway/language",
+       // "backlight",
+       // "sway/language",
         "battery",
         "clock",
         "tray"
