--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,6 +14,21 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+input {
+  touchpad {
+        disable_while_typing=1
+        natural_scroll=1
+        clickfinger_behavior=1
+        middle_button_emulation=0
+        tap-to-click=0
+    }
+}
+gestures {
+  workspace_swipe=true
+  workspace_swipe_min_speed_to_force=4
+  workspace_swipe_create_new=false
+  workspace_swipe_forever=true
+}
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -122,6 +137,23 @@ gestures {
 #    workspace_swipe = true
 #    workspace_swipe_fingers = 3
 }
+
+master {
+  new_on_top=true
+  no_gaps_when_only = true
+}
+
+
+decoration {
+    rounding=10
+    blur=1
+    blur_size=3 # minimum 1
+    blur_passes=1 # minimum 1, more passes = more resource intensive.
+    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
+    # if you want heavy blur, you need to up the blur_passes.
+    # the more passes, the more you can up the blur_size without noticing artifacts.
+}
+
 
 
 animations {
@@ -283,3 +315,103 @@ bindl =, XF86AudioNext, exec, playerctl position 5+
 #bind = mod, key, exec, [rules...] command
 #bind = SUPER, E, exec, [workspace 2 silent; float; move 0 0] kitty
 windowrulev2 = maximize,class:(Microsoft-edge)
+
+
+
+
+misc {
+  disable_hyprland_logo=true
+  disable_splash_rendering=true
+  mouse_move_enables_dpms=true
+}
+
+# example window rules
+# for windows named/classed as abc and xyz
+#windowrule=move 69 420,abc
+#windowrule=size 420 69,abc
+windowrule=tile,kitty
+windowrule=tile,reStream
+windowrule=tile,ffplay
+blurls=rofi
+# windowrule=pinned,class:^(kitty)$,title:^(kitty)$
+# windowrulev2 = opacity 0.80,class:^(kitty)$
+# windowrulev2 = opacity 0.80,class:^(kitty)$,title:^.*(nvim).*$
+
+windowrule=tile,librewolf
+windowrule=tile,discord
+windowrule=tile,spotify
+# windowrule=opacity 0.90,zsh
+# windowrule=opacity 0.90,kitty
+# windowrule=opacity 1,neovim
+windowrule=opacity 0.80,alacritty
+windowrule=opacity 0.80,rofi
+# windowrule=animation popin,kitty
+# windowrule=animation slide right,kitty
+windowrule=size 50%,pavucontrol
+windowrule=float,pavucontrol
+windowrule=center,pavucontrol
+windowrule=size 50%,blueman-manager
+windowrule=float,blueman-manager
+windowrule=center,blueman-manager
+#windowrule=pseudo,abc
+#windowrule=monitor 0,xyz
+# windowrule=opacity 0.2,kitty
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
+
+# example binds
+bind=SUPER,Q,killactive
+bind=SUPER,F,fullscreen,1
+bind=SUPERSHIFT,F,fullscreen,0
+bind=SUPER,g,exec,/home/chris/.local/bin/toggle_gaps.sh
+bind=SUPER,s,exec,/home/chris/.local/bin/shorts.sh
+bind=SUPER,RETURN,exec,kitty
+bind=SUPER,C,killactive,
+bind=SUPERSHIFT,Q,exit,
+bind=SUPER,E,exec,pcmanfm
+bind=SUPER,P,exec,pavucontrol
+bind=SUPER,O,exec,obs
+bind=SUPER,W,killactive
+bind=SUPER,b,exec,brave
+# bind=SUPERSHIFT,b,exec,/home/chris/.local/bin/toggle_waybar.sh
+bind=SUPERSHIFT,V,togglefloating,
+bind=SUPER,space,exec,rofi -show drun
+bind=SUPER,d,exec,blueman-manager
+# bindsym $mod+space exec wofi --show drun --insensitive --allow-images --prompt=""
+# bind=SUPER,P,pseudo,
+bind=SUPER,R,exec,/home/chris/Repos/reStream/reStream.sh
+bind=SUPER,ESCAPE,exec,sudo systemctl suspend
+bind=SUPER,Y,exec,grim -g "$(slurp)" - | swappy -f -
+bind=,XF86AudioMute,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
+# bind=,F10,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind=,F10,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind=,F11,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind=,F12,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind=,XF86MonBrightnessUp,exec,brightnessctl -q set +5% # increase screen brightness
+bind=,XF86MonBrightnessDown,exec,brightnessctl -q set 5%- # decrease screen brightnes
+bind=SUPERSHIFT,R,exec,wf-recorder -g "$(slurp)"
+bind=SUPERSHIFT,E,exec,wlogout
+# bind=SUPERSHIFT,L,exec,swaylock
+
+bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
+bind=SUPER,j,layoutmsg,cyclenext
+bind=SUPER,k,layoutmsg,cycleprev
+
+bind=SUPER,h,movefocus,l
+bind=SUPER,l,movefocus,r
+
+bind=SUPER,left,resizeactive,-40 0
+bind=SUPER,right,resizeactive,40 0
+
+bind=SUPERSHIFT,h,movewindow,l
+bind=SUPERSHIFT,l,movewindow,r
+bind=SUPERSHIFT,k,movewindow,u
+bind=SUPERSHIFT,j,movewindow,d
+
+# bind=SUPER,s,movetoworkspace,special
+# bind=SUPER,n,togglespecialworkspace,
+
+
