--- a/.config/sway/config
+++ b/.config/sway/config
@@ -101,7 +101,7 @@ font pango:monospace 5
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # Requires: desktop-backgrounds-compat, swaybg
-output * bg /usr/share/backgrounds/default.png fill
+#  output * bg /usr/share/backgrounds/default.png fill
 
 #
 # Example configuration:
