git ignoe change, tmux aliases enabled

--- a/.config/tmux/tmux.config
+++ b/.config/tmux/tmux.config
@@ -1,7 +1,7 @@
 #enable mouse support
 set -g mouse on
 
-#set prefix 
+#set prefix
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
@@ -9,5 +9,6 @@ bind C-Space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
+# load bash aliases
+if-shell 'test -f ~/.bash_aliases' 'run-shell "source ~/.bash_aliases"'
 run '~/.tmux/plugins/tpm/tpm'
