--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -8,22 +8,24 @@
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
   "agent": {
+    "always_allow_tool_actions": true,
     "inline_assistant_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4.1"
+      "provider": "mistral",
+      "model": "mistral-large-latest"
     },
     "default_profile": "write",
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "model": "claude-sonnet-4-thinking"
     }
   },
   "base_keymap": "VSCode",
   "features": {
     "edit_prediction_provider": "zed"
   },
+  "format_on_save": "off",
   "vim": {
-    "use_system_clipboard": "always",
+    "use_system_clipboard": "on_yank",
     "use_smartcase_find": true
   },
   "vim_mode": true,
