--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -29,11 +29,11 @@
     "use_smartcase_find": true
   },
   "vim_mode": true,
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "ui_font_size": 14,
+  "buffer_font_size": 14,
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "Andromeda"
+    "dark": "Ayu Dark"
   }
 }
